feat: add photo_url field to recipes (#7)
