# internal/db/models.go
@@ -21,6 +21,7 @@ type Recipe struct {
 	CreatedAt        time.Time  `json:"created_at"`
 	UpdatedAt        time.Time  `json:"updated_at"`
 	DeletedAt        *time.Time `json:"deleted_at"`
+	PhotoUrl         *string    `json:"photo_url"`
 }
 
 type RecipeIngredient struct {
